--- a/RUN2.WebUI/src/App.css
+++ b/RUN2.WebUI/src/App.css
@@ -1,6 +1,5 @@
-a, a:link, a:visited, a:hover, a:active { 
-    text-decoration: none; 
-    color: inherit;
+body {
+    overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
 .vertical-navbar {
@@ -12,4 +11,26 @@ a, a:link, a:visited, a:hover, a:active {
 .navbar-links {
     margin: .5em;
     font-size: small;
+}
+
+.link-button, .link-button:link, .link-button:visited, .link-button:hover, .link-button:active{
+    background: none!important;
+    border: none;
+    padding: 0!important;
+    /*optional*/
+    font-family: arial, sans-serif;
+    /*input has OS specific font-family*/
+    color: inherit;
+    text-decoration: none;
+    cursor: pointer;
+    text-align: left;
+    margin-left: 1em;
+}
+
+.street-card {
+    margin-bottom: 1em;
+    margin-right: calc(var(--bs-gutter-x) * .5);
+    margin-left: calc(var(--bs-gutter-x) * .5);
+    padding-left: 0;
+    padding-right: 0;
 }
