--- a/RUN2.WebUI/src/App.css
+++ b/RUN2.WebUI/src/App.css
@@ -27,10 +27,12 @@ body {
     margin-left: 1em;
 }
 
+.header-button {
+    text-align: center;
+}
+
 .street-card {
     margin-bottom: 1em;
-    margin-right: calc(var(--bs-gutter-x) * .5);
-    margin-left: calc(var(--bs-gutter-x) * .5);
     padding-left: 0;
     padding-right: 0;
 }
